backend/frontend-eks.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2  # 원하는 레플리카 수
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        app: frontend
      containers:
        - name: frontend-container
          image: ckdgkim/frontendproject:front-PLACEHOLDER_TAG  # 태그를 동적으로 교체
          ports:
            - containerPort: 80
#          env:
#            - name: BACKEND_URL
#              value: "http://backend-service:8080"  # Kubernetes 서비스 이름을 통해 백엔드에 접근
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001  # 선택적, Kubernetes가 포트를 자동으로 할당
  type: NodePort  # 노드 IP를 통해 접근 가능
