backend/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service  # 서비스의 이름
spec:
  type: NodePort  # 서비스 종류 (외부에서 접근할 수 있는 NodePort 사용)
  selector:
    app: front-app  # pod 라벨이 "app: front-app"인 파드와 연결
  ports:
    - protocol: TCP  # TCP 프로토콜 사용
      port: 80  # 클러스터 내부에서 서비스에 접근할 때 사용할 포트
      targetPort: 80  # 매핑할 파드의 포트 번호
      nodePort: 30000  # 외부에서 접근할 때 사용할 노드 포트
